# webull-rs

./: .augment-guidelines  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  LICENSE  PUBLISHING.md  README.md  RELEASE_NOTES.md  SECURITY.md
.github/workflows/: ci.yml
examples/: account_extended.rs  authentication.rs  caching.rs  combined_operations.rs  credentials.rs  error_handling.rs  market_data.rs  market_data_extended.rs  order_placement.rs  orders_extended.rs  paper_trading.rs  streaming.rs
src/: auth.rs  client.rs  config.rs  error.rs  lib.rs
src/endpoints/: account.rs  base.rs  market_data.rs  mod.rs  orders.rs  orders_test.rs  watchlists.rs
src/models/: account.rs  market.rs  mod.rs  order.rs  response.rs
src/streaming/: client.rs  events.rs  mod.rs  subscription.rs
src/utils/: cache.rs  credentials.rs  crypto.rs  mod.rs  rate_limit.rs  serialization.rs
tests/: integration_tests.rs
