[package]
name = "webull-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust client for the Webull trading API"
authors = ["Chairon <wszzsw@nullified.xyz>"]
license = "MIT"
repository = "https://github.com/wszzsw/webull-rs"
keywords = ["webull", "trading", "finance", "api", "stocks"]
categories = ["api-bindings", "finance"]
exclude = [
    ".augment-guidelines",
    "tasks.md",
    "pdd.md"
]

[dependencies]
reqwest = { version = "0.11", features = ["json"], default-features = false }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "net"] }
tokio-tungstenite = "0.17"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
chrono = { version = "0.4.19", features = ["serde"] }
url = "2.2.2"
log = "0.4"
rand = "0.8"
sha2 = "0.9"
hmac = "0.11"
base64 = "0.13"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.0"
